--- a/src/index.css
+++ b/src/index.css
@@ -9,7 +9,7 @@ a {
 }
 ::-webkit-scrollbar {
 	width: 0px;
-	height: 1px;
+	height: 4px;
 }
 ::-webkit-scrollbar-thumb {
 	background-color: rgb(114, 113, 113);
@@ -23,4 +23,32 @@ a {
 	border: none;
 	outline: none;
 	width: 350px;
+}
+.category-btn {
+	font-weight: bold !important;
+	text-transform: capitalize;
+	display: flex;
+	align-items: center;
+	justify-content: start;
+	cursor: pointer;
+	background: transparent;
+	outline: none;
+	border: none;
+
+	padding: 7px 15px;
+	margin: 10px 0px;
+	border-radius: 20px;
+	transition: all 0.3s ease;
+}
+.category-btn:hover {
+	background-color: #76323f !important;
+	color: white !important;
+}
+.category-btn:hover span {
+	color: white !important;
+}
+@media screen and (max-width: 600px) {
+	.search-bar {
+		width: 200px;
+	}
 }
